<resources>
    <string name="app_name">ePatrakaar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">ePatrakaar</string>
    <string name="random_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="category">Category,  </string>
    <string name="time">2 days ago</string>
    <string name="follow">Follow</string>
    <string name="notifications">Notifications</string>
    <string name="notification_title">Checkout this new news</string>
    <string name="notification_subtitle">Tap for more</string>
    <string name="custom_time">2 days ago</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="contact_number">Contact Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="verify_number">\"Verify %s \"</string>
    <string name="waiting_next">Waiting to automatically detect an SMS sent to\n %s Wrong Number?</string>
    <string name="second_remaining">Seconds Remaining: %d</string>
    <string name="greeting_notif_shared_pref_key">Greeting_notification_key</string>
    <string name="notification_greeting_morning">Read, what happened in the world while you were sleeping</string>
    <string name="notification_greeting_afternooon">Good afternoon, read the breaking news in less than 150 words</string>
    <string name="notification_greeting_evening">Good evening, relax and have a sip of tea</string>
    <string name="notification_greeting_night">It\'s been a while you are awake. Take a good sleep</string>
    <string name="sign_in">Sign In</string>
    <string name="via_google">Via Google</string>
    <string name="via_phone_number">Via Phone Number</string>
    <string name="please_enter_your_phone_number_to_get_a_verification_code">Please enter your phone number to get a verification code</string>
    <string name="request_otp">Request OTP</string>
    <string name="by_clicking_i_accept_the_terms_of_service_and_privacy_policy">By clicking, I accept the terms of service and privacy policy.</string>
    <string name="please_enter_the_verification_code_sent_to_you">Please enter the verification code sent to</string>
    <string name="did_n_t_receive_it_retry">Didn\'t receive it? Retry in  </string>
    <string name="submit">Submit</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="phone_number">+%1$s %2$s</string>
    <string name="skip">Skip</string>
</resources>