<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.auth.AuthOptionsFragment">

   <ImageView
       android:src="@mipmap/ic_launcher"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="80dp"
       android:layout_width="200dp"
       android:layout_height="200dp"
       tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/libre_franklin"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btnGoogle"
            android:backgroundTint="@color/app_color"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:text="@string/via_google" />

        <Button
            android:id="@+id/btnPhone"
            android:backgroundTint="@color/app_color"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:text="@string/via_phone_number" />

    </LinearLayout>

</RelativeLayout>