<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.fragment.auth.PhoneFragment">

    <androidx.appcompat.widget.Toolbar
        app:title="OTP Verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_phone_number_to_get_a_verification_code" />

    <LinearLayout
        android:background="@drawable/custom_et"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/etContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:ccpDialog_showFlag="true"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="false"
            app:ccp_defaultPhoneCode="91"
            tools:ccp_contentColor="?android:textColorPrimary"
            tools:ccp_textSize="20dp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_gravity="center"
            app:dividerColor="?android:textColorPrimary"
            android:layout_height="35dp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:inputType="phone"
            android:textColor="?android:textColorPrimary"
            android:background="@android:color/transparent"
            android:maxLength="10"
            android:hint="@string/enter_phone_number"
            android:padding="5dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRequest"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_otp"
        android:textAllCaps="false"
        android:padding="15dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/app_color"
        android:textSize="18sp" />

    <TextView
        android:textSize="15sp"
        android:textColor="?android:textColorPrimary"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_clicking_i_accept_the_terms_of_service_and_privacy_policy" />

</LinearLayout>