<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp"
    tools:context=".view.fragment.ui.EditProfileFragment">

    <RelativeLayout
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivImage"
            android:layout_width="110dp"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/my_account_filled"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="91dp"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />/>

        <ImageView
            android:id="@+id/btnEditPic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignBottom="@id/ivImage"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="-70dp"
            android:layout_toEndOf="@id/ivImage"
            android:src="@drawable/add_button"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <TextView
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textSize="16sp"
        android:padding="5dp"
        android:background="@drawable/custom_et"
        android:inputType="textPersonName"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_id" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:textSize="16sp"
        android:background="@drawable/custom_et"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/date_of_birth" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="false"
        android:cursorVisible="false"
        android:textSize="16sp"
        android:hint="      MM/DD/YYYY"
        android:drawableLeft="@drawable/ic_baseline_calendar"
        android:background="@drawable/custom_et"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill,LabelFor" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <com.hbb20.CountryCodePicker
            android:id="@+id/etContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="false"
            tools:ccp_contentColor="#fcfdfd"
            tools:ccp_textSize="20dp" />


        <EditText
            android:id="@+id/etContactCode"
            android:layout_width="150dp"
            android:maxLength="10"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:padding="5dp"
            android:textSize="16sp"
            android:background="@drawable/custom_et"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="5dp"
            android:layout_marginVertical="10dp"
            android:padding="5dp"
            android:text="Verify"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="10dp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:text="Save"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        tools:ignore="HardcodedText" />

</LinearLayout>